--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -3,13 +3,15 @@
     "input": "Input",
     "output": "Output",
     "shuffle & copy": "Shuffle & Copy",
-    "set additional string": "Set additional string",
-    "prepend to string": "Prepend to string",
-    "append after string": "Append after string",
-    "random word": "Random Word",
-    "characters used": "Characters Used",
-    "characters length": "Characters Length",
+    "set additional text": "Set Additional Text",
+    "generate random text": "Generate Random Text",
+    "prepend to text": "Prepend to text",
+    "append after text": "Append after text",
+    "random text": "Random Text",
+    "length": "Length",
     "stop words": "Stop Words",
     "please enter text": "Please enter text",
-    "seperated by comma": "Seperated by comma"
+    "seperated by comma": "Seperated by comma",
+    "type A": "TYPE A",
+    "type B": "TYPE B"
 }
