feat: add limit text bytes per line

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,17 +1,21 @@
 {
-    "title": "Smart Shuffle Words",
-    "input": "Input",
-    "output": "Output",
-    "shuffle & copy": "Shuffle & Copy",
-    "set additional text": "Set Additional Text",
-    "generate random text": "Generate Random Text",
-    "prepend to text": "Prepend to text",
-    "append after text": "Append after text",
-    "random text": "Random Text",
+    "Smart Shuffle Words": "Smart Shuffle Words",
+    "Input": "Input",
+    "Output": "Output",
+    "Shuffle & Copy": "Shuffle & Copy",
+    "Set Additional Text": "Set Additional Text",
+    "Generate Random Text": "Generate Random Text",
+    "Prepend to text": "Prepend to text",
+    "Append after text": "Append after text",
+    "Random Text": "Random Text",
     "length": "Length",
-    "stop words": "Stop Words",
-    "please enter text": "Please enter text",
-    "seperated by comma": "Seperated by comma",
+    "Stop Words": "Stop Words",
+    "Please enter text": "Please enter text",
+    "Seperated by comma": "Seperated by comma",
     "type A": "TYPE A",
-    "type B": "TYPE B"
+    "type B": "TYPE B",
+    "limit text bytes per line": "Limit text bytes per line",
+    "Naver Ads": "Naver Ads",
+    "Auction": "Auction",
+    "G-Market": "G-Market"
 }
