--- a/src/locales/ko/translation.json
+++ b/src/locales/ko/translation.json
@@ -1,17 +1,21 @@
 {
-    "title": "스마트 셔플 워드",
-    "input": "상품명",
-    "output": "상품명 수정",
-    "shuffle & copy": "상품명 변경 후 자동 복사",
-    "set additional text": "추가 문자열 설정",
-    "generate random text": "무작위 문자 생성",
-    "prepend to text": "문자열 앞에 추가",
-    "append after text": "문자열 뒤에 추가",
-    "random text": "무작위 문자",
+    "Smart Shuffle Words": "스마트 셔플 워드",
+    "Input": "상품명",
+    "Output": "상품명 수정",
+    "Shuffle & Copy": "상품명 변경 후 자동 복사",
+    "Set Additional Text": "추가 문자열 설정",
+    "Generate Random Text": "무작위 문자 생성",
+    "Prepend to text": "문자열 앞에 추가",
+    "Append after text": "문자열 뒤에 추가",
+    "Random Text": "무작위 문자",
     "length": "길이",
-    "stop words": "금칙어",
-    "please enter text": "텍스트를 입력 하십시오",
-    "seperated by comma": "쉼표로 구분 합니다",
+    "Stop Words": "금칙어",
+    "Please enter text": "텍스트를 입력 하십시오",
+    "Seperated by comma": "쉼표로 구분 합니다",
     "type A": "타입 A",
-    "type B": "타입 B"
+    "type B": "타입 B",
+    "limit text bytes per line": "줄당 텍스트 바이트 제한",
+    "Naver Ads": "네이버 광고",
+    "Auction": "옥션",
+    "G-Market": "지마켓"
 }
