feat: add general settings

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -2,20 +2,24 @@
     "Smart Shuffle Words": "Smart Shuffle Words",
     "Input": "Input",
     "Output": "Output",
+    "Console": "Console",
+    "Shuffle": "Shuffle",
+    "Copy": "Copy",
     "Shuffle & Copy": "Shuffle & Copy",
-    "Set Additional Text": "Set Additional Text",
+    "General Market": "General Market",
     "Generate Random Text": "Generate Random Text",
     "Prepend to text": "Prepend to text",
     "Append after text": "Append after text",
     "Random Text": "Random Text",
-    "length": "Length",
-    "Stop Words": "Stop Words",
+    "Length": "Length",
+    "Enter the stopwords to be removed": "Enter the stopwords to be removed",
     "Please enter text": "Please enter text",
     "Seperated by comma": "Seperated by comma",
-    "type A": "TYPE A",
-    "type B": "TYPE B",
-    "limit text bytes per line": "Limit text bytes per line",
+    "Limit text to bytes": "Limit text to bytes",
     "Naver Ads": "Naver Ads",
     "Auction": "Auction",
-    "G-Market": "G-Market"
+    "G-Market": "G-Market",
+    "Highlighting stopwords": "Highlighting stopwords",
+    "General Settings": "General Settings",
+    "Advanced Settings": "Advanced Settings"
 }
