--- a/src/locales/ko/translation.json
+++ b/src/locales/ko/translation.json
@@ -2,20 +2,24 @@
     "Smart Shuffle Words": "스마트 셔플 워드",
     "Input": "상품명",
     "Output": "상품명 수정",
-    "Shuffle & Copy": "상품명 변경 후 자동 복사",
-    "Set Additional Text": "추가 문자열 설정",
+    "Console": "콘솔",
+    "Shuffle": "상품명 변경",
+    "Copy": "복사",
+    "Shuffle & Copy": "상품명 변경 후 복사",
+    "General Market": "일반 마켓",
     "Generate Random Text": "무작위 문자 생성",
     "Prepend to text": "문자열 앞에 추가",
     "Append after text": "문자열 뒤에 추가",
     "Random Text": "무작위 문자",
-    "length": "길이",
-    "Stop Words": "금칙어",
+    "Length": "길이",
+    "Enter the stopwords to be removed": "제거할 금칙어를 입력하세요",
     "Please enter text": "텍스트를 입력 하십시오",
     "Seperated by comma": "쉼표로 구분 합니다",
-    "type A": "타입 A",
-    "type B": "타입 B",
-    "limit text bytes per line": "줄당 텍스트 바이트 제한",
+    "Limit text to bytes": "텍스트를 바이트로 제한합니다",
     "Naver Ads": "네이버 광고",
     "Auction": "옥션",
-    "G-Market": "지마켓"
+    "G-Market": "지마켓",
+    "Highlighting stopwords": "금칙어 강조 표시",
+    "General Settings": "일반 설정",
+    "Advanced Settings": "고급 설정"
 }
