--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -8,10 +8,10 @@
     "Shuffle & Copy": "Shuffle & Copy",
     "General Market": "General Market",
     "Generate Random Text": "Generate Random Text",
-    "Prepend to text": "Prepend to text",
-    "Append after text": "Append after text",
+    "Start text": "Start text",
+    "End text": "End text",
     "Random Text": "Random Text",
-    "Length": "Length",
+    "Length of random text generated:": "Length of random text generated:",
     "Enter the stopwords to be removed": "Enter the stopwords to be removed",
     "Please enter text": "Please enter text",
     "Seperated by comma": "Seperated by comma",
@@ -21,5 +21,6 @@
     "G-Market": "G-Market",
     "Highlighting stopwords": "Highlighting stopwords",
     "General Settings": "General Settings",
-    "Advanced Settings": "Advanced Settings"
+    "Advanced Settings": "Advanced Settings",
+    "Characters to use when creating random text:": "Characters to use when creating random text:"
 }
