refactor: A code change that neither fixes a bug or adds a feature

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,10 +1,13 @@
 {
     "Smart Shuffle Words": "Smart Shuffle Words",
-    "Input": "Input",
-    "Output": "Output",
+    "Text": "Text",
+    "Preview": "Preview",
     "Console": "Console",
     "Shuffle": "Shuffle",
+    "Shuffled!": "Shuffled!",
     "Copy": "Copy",
+    "Copied!": "Copied!",
+    "Updated!": "Updated!",
     "Shuffle & Copy": "Shuffle & Copy",
     "General Market": "General Market",
     "Generate Random Text": "Generate Random Text",
@@ -12,15 +15,22 @@
     "End text": "End text",
     "Random Text": "Random Text",
     "Length of random text generated:": "Length of random text generated:",
-    "Enter the stopwords to be removed": "Enter the stopwords to be removed",
+    "Enter the stopwords to be removed:": "Enter the stopwords to be removed:",
     "Please enter text": "Please enter text",
     "Seperated by comma": "Seperated by comma",
-    "Limit text to bytes": "Limit text to bytes",
+    "Text length limit:": "Text length limit:",
     "Naver Ads": "Naver Ads",
     "Auction": "Auction",
     "G-Market": "G-Market",
     "Highlighting stopwords": "Highlighting stopwords",
     "General Settings": "General Settings",
     "Advanced Settings": "Advanced Settings",
-    "Characters to use when creating random text:": "Characters to use when creating random text:"
+    "Characters to use when creating random text:": "Characters to use when creating random text:",
+    "Reset": "Reset",
+    "Reseted!": "Reseted!",
+    "Agree": "Agree",
+    "Disagree": "Disagree",
+    "Are you sure you want to reset all settings?": "Are you sure you want to reset all settings?",
+    "All settings in General Settings and Advanced Settings will be reset.": "All settings in General Settings and Advanced Settings will be reset.",
+    "Resetting cannot restore existing settings.": "Resetting cannot restore existing settings."
 }
