--- a/src/locales/ko/translation.json
+++ b/src/locales/ko/translation.json
@@ -1,10 +1,13 @@
 {
     "Smart Shuffle Words": "스마트 셔플 워드",
-    "Input": "상품명",
-    "Output": "상품명 수정",
+    "Text": "상품명",
+    "Preview": "미리보기",
     "Console": "콘솔",
     "Shuffle": "상품명 변경",
+    "Shuffled!": "상품명이 변경되었습니다!",
     "Copy": "복사",
+    "Copied!": "복사되었습니다!",
+    "Updated!": "업데이트되었습니다!",
     "Shuffle & Copy": "상품명 변경 후 복사",
     "General Market": "일반 마켓",
     "Generate Random Text": "무작위 문자 생성",
@@ -12,15 +15,22 @@
     "End text": "마지막 문자",
     "Random Text": "무작위 문자",
     "Length of random text generated:": "생성되는 랜덤 텍스트의 길이:",
-    "Enter the stopwords to be removed": "제거할 금칙어를 입력하세요",
+    "Enter the stopwords to be removed:": "제거할 금칙어를 입력하세요:",
     "Please enter text": "텍스트를 입력 하십시오",
     "Seperated by comma": "쉼표로 구분 합니다",
-    "Limit text to bytes": "텍스트를 바이트로 제한합니다",
+    "Text length limit:": "텍스트 길이를 제한합니다:",
     "Naver Ads": "네이버 광고",
     "Auction": "옥션",
     "G-Market": "지마켓",
     "Highlighting stopwords": "금칙어 강조 표시",
     "General Settings": "일반 설정",
     "Advanced Settings": "고급 설정",
-    "Characters to use when creating random text:": "랜덤 텍스트를 생성할 때 사용할 문자:"
+    "Characters to use when creating random text:": "랜덤 텍스트를 생성할 때 사용할 문자:",
+    "Reset": "초기화",
+    "Reseted!": "재설정되었습니다!",
+    "Agree": "동의",
+    "Disagree": "미동의",
+    "Are you sure you want to reset all settings?": "모든 설정을 재설정하시겠습니까?",
+    "All settings in General Settings and Advanced Settings will be reset.": "일반 설정 및 고급 설정의 모든 설정이 재설정됩니다.",
+    "Resetting cannot restore existing settings.": "재설정하면 기존 설정을 복원할 수 없습니다."
 }
