--- a/src/locales/ko/translation.json
+++ b/src/locales/ko/translation.json
@@ -2,7 +2,7 @@
     "Smart Shuffle Words": "스마트 셔플 워드",
     "Text": "상품명",
     "Preview": "미리보기",
-    "Console": "콘솔",
+    "Console": "작업내역",
     "Shuffle": "상품명 변경",
     "Shuffled!": "상품명이 변경되었습니다!",
     "Copy": "복사",
@@ -15,10 +15,11 @@
     "End text": "마지막 문자",
     "Random Text": "무작위 문자",
     "Length of random text generated:": "생성되는 랜덤 텍스트의 길이:",
-    "Enter the stopwords to be removed:": "제거할 금칙어를 입력하세요:",
+    "Enter the stopwords to be removed:": "삭제할 금칙어를 입력하세요:",
+    "Enter the special characters to be removed:": "삭제할 특수 문자를 입력하세요:",
     "Please enter text": "텍스트를 입력 하십시오",
-    "Seperated by comma": "쉼표로 구분 합니다",
-    "Text length limit:": "텍스트 길이를 제한합니다:",
+    "Seperated by whitespace": "공백으로 구분 합니다",
+    "Select the text length per line:": "텍스트 길이를 선택하세요:",
     "Naver Ads": "네이버 광고",
     "Auction": "옥션",
     "G-Market": "지마켓",
@@ -32,5 +33,6 @@
     "Disagree": "미동의",
     "Are you sure you want to reset all settings?": "모든 설정을 재설정하시겠습니까?",
     "All settings in General Settings and Advanced Settings will be reset.": "일반 설정 및 고급 설정의 모든 설정이 재설정됩니다.",
-    "Resetting cannot restore existing settings.": "재설정하면 기존 설정을 복원할 수 없습니다."
+    "Resetting cannot restore existing settings.": "재설정하면 기존 설정을 복원할 수 없습니다.",
+    "Remove index column:": "인덱스 열 제거:"
 }
