--- a/src/locales/ko/translation.json
+++ b/src/locales/ko/translation.json
@@ -36,5 +36,6 @@
     "All settings in General Settings and Advanced Settings will be reset.": "일반 설정 및 고급 설정의 모든 설정이 재설정됩니다.",
     "Resetting cannot restore existing settings.": "재설정하면 기존 설정을 복원할 수 없습니다.",
     "Remove index column:": "인덱스 열 제거:",
-    "Remove stopwords": "금칙어 중복 제거"
+    "Remove stopwords": "금칙어 중복 제거",
+    "Reorder random text characters:": "랜덤 텍스트 문자 재정렬:"
 }
