--- a/src/locales/ko/translation.json
+++ b/src/locales/ko/translation.json
@@ -10,7 +10,6 @@
     "Removed!": "제거되었습니다!",
     "Updated!": "업데이트되었습니다!",
     "Shuffle & Copy": "상품명 변경 후 복사",
-    "General Market": "일반 마켓",
     "Generate Random Text": "무작위 문자 생성",
     "Start text": "시작 문자",
     "End text": "마지막 문자",
@@ -22,8 +21,6 @@
     "Seperated by whitespace": "공백으로 구분 합니다",
     "Select the text length per line:": "텍스트 길이를 선택하세요:",
     "Naver Ads": "네이버 광고",
-    "Auction": "옥션",
-    "G-Market": "지마켓",
     "Highlighting stopwords": "금칙어 강조 표시",
     "General Settings": "일반 설정",
     "Advanced Settings": "고급 설정",
@@ -40,5 +37,7 @@
     "Reorder random text characters:": "랜덤 텍스트 문자 재정렬:",
     "Digit+Word": "숫자+문자",
     "Word+Digit": "문자+숫자",
-    "None": "없음"
+    "None": "없음",
+    "Self Shopping Mall": "자사몰",
+    "Online Marketplace": "오픈마켓"
 }
