--- a/src/locales/ko/translation.json
+++ b/src/locales/ko/translation.json
@@ -7,7 +7,6 @@
     "Shuffled!": "상품명이 변경되었습니다!",
     "Copy": "복사",
     "Copied!": "복사되었습니다!",
-    "Removed!": "제거되었습니다!",
     "Updated!": "업데이트되었습니다!",
     "Shuffle & Copy": "상품명 변경 후 복사",
     "Generate Random Text": "무작위 문자 생성",
@@ -39,5 +38,6 @@
     "Word+Digit": "문자+숫자",
     "None": "없음",
     "Self Shopping Mall": "자사몰",
-    "Online Marketplace": "오픈마켓"
+    "Online Marketplace": "오픈마켓",
+    "Duplicate words have been removed!": "중복된 단어가 제거되었습니다!"
 }
