--- a/src/locales/ko/translation.json
+++ b/src/locales/ko/translation.json
@@ -45,6 +45,9 @@
     "An error has occurred.": "오류가 발생했습니다.",
     "Import data": "데이터 가져오기",
     "Import stopwords": "금칙어 가져오기",
-    "Stopword url:": "금칙어 링크 주소:",
-    "Enter the address of a Google Sheets published on the web.": "웹에 게시된 구글 스프레드시트의 주소를 입력하세요."
+    "Google spreadsheets publish URL:": "구글 스프레드시트 발행 주소:",
+    "Enter the address of a google spreadsheets published on the web.": "웹에 게시된 구글 스프레드시트의 주소를 입력하세요.",
+    "Google spreadsheets ID:": "구글 스프레드시트 아이디:",
+    "Enter the shared google spreadsheets ID.": "공유 된 구글 스프레드시트 아이디를 입력하세요.",
+    "Import stopwords from google spreadsheets:": "구글 스프레드시트에서 금칙어 가져오기:"
 }
