--- a/src/locales/ko/translation.json
+++ b/src/locales/ko/translation.json
@@ -14,7 +14,9 @@
     "Start text": "시작 문자",
     "End text": "마지막 문자",
     "Random Text": "무작위 문자",
-    "Length of random text generated:": "생성되는 랜덤 텍스트의 길이:",
+    "Characters used:": "사용된 문자:",
+    "Character length:": "문자의 길이:",
+    "Order of characters:": "문자의 순서:",
     "Enter the stopwords to be removed:": "삭제할 금칙어를 입력하세요:",
     "Enter the special characters to be removed:": "삭제할 특수 문자를 입력하세요:",
     "Please enter text": "텍스트를 입력 하십시오",
@@ -24,7 +26,6 @@
     "Highlighting stopwords": "금칙어 강조 표시",
     "General Settings": "일반 설정",
     "Advanced Settings": "고급 설정",
-    "Characters to use when creating random text:": "랜덤 텍스트를 생성할 때 사용할 문자:",
     "Reset": "초기화",
     "Reseted!": "재설정되었습니다!",
     "Agree": "동의",
@@ -34,7 +35,6 @@
     "Resetting cannot restore existing settings.": "재설정하면 기존 설정을 복원할 수 없습니다.",
     "Remove index column:": "인덱스 열 제거:",
     "Remove stopwords": "금칙어 중복 제거",
-    "Reorder random text characters:": "랜덤 텍스트 문자 재정렬:",
     "Digit+Word": "숫자+문자",
     "Word+Digit": "문자+숫자",
     "None": "없음",
@@ -43,11 +43,13 @@
     "Duplicate words have been removed!": "중복된 단어가 제거되었습니다!",
     "Stopword List": "금칙어 목록",
     "An error has occurred.": "오류가 발생했습니다.",
-    "Import data": "데이터 가져오기",
-    "Import stopwords": "금칙어 가져오기",
+    "Import stopwords": "금칙어 불러오기",
     "Google spreadsheets publish URL:": "구글 스프레드시트 발행 주소:",
     "Enter the address of a google spreadsheets published on the web.": "웹에 게시된 구글 스프레드시트의 주소를 입력하세요.",
-    "Google spreadsheets ID:": "구글 스프레드시트 아이디:",
-    "Enter the shared google spreadsheets ID.": "공유 된 구글 스프레드시트 아이디를 입력하세요.",
-    "Import stopwords from google spreadsheets:": "구글 스프레드시트에서 금칙어 가져오기:"
+    "Google spreadsheets key:": "구글 스프레드시트 키:",
+    "Enter the shared google spreadsheets key.": "공유 된 구글 스프레드시트 키를 입력하세요.",
+    "Google Spreadsheets data types:": "구글 스프레드시트 데이터 타입:",
+    "Would you like to import stopwords?": "금칙어를 불러오시겠습니까?",
+    "Import stopwords from Google spreadsheets.": "구글 스프레드시트에서 금칙어를 불러옵니다.",
+    "Existing stopwords cannot be restored.": "기존 금칙어는 복원할 수 없습니다."
 }
