--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -14,7 +14,9 @@
     "Start text": "Start text",
     "End text": "End text",
     "Random Text": "Random Text",
-    "Length of random text generated:": "Length of random text generated:",
+    "Characters used:": "Characters used:",
+    "Character length:": "Character length:",
+    "Order of characters:": "Order of characters:",
     "Enter the stopwords to be removed:": "Enter the stopwords to be removed:",
     "Enter the special characters to be removed:": "Enter the special characters to be removed:",
     "Please enter text": "Please enter text",
@@ -24,7 +26,6 @@
     "Highlighting stopwords": "Highlighting stopwords",
     "General Settings": "General Settings",
     "Advanced Settings": "Advanced Settings",
-    "Characters to use when creating random text:": "Characters to use when creating random text:",
     "Reset": "Reset",
     "Reseted!": "Reseted!",
     "Agree": "Agree",
@@ -34,7 +35,6 @@
     "Resetting cannot restore existing settings.": "Resetting cannot restore existing settings.",
     "Remove index column:": "Remove index column:",
     "Remove stopwords": "Remove stopwords",
-    "Reorder random text characters:": "Reorder random text characters:",
     "Digit+Word": "Digit+Word",
     "Word+Digit": "Word+Digit",
     "None": "None",
@@ -43,11 +43,13 @@
     "Duplicate words have been removed!": "Duplicate words have been removed!",
     "Stopword List": "Stopword List",
     "An error has occurred.": "An error has occurred.",
-    "Import data": "Import data",
     "Import stopwords": "Import stopwords",
     "Google spreadsheets publish URL:": "Google spreadsheets publish URL:",
     "Enter the address of a google spreadsheets published on the web.": "Enter the address of a google spreadsheets published on the web.",
-    "Google spreadsheets ID:": "Google spreadsheets ID:",
-    "Enter the shared google spreadsheets ID.": "Enter the shared google spreadsheets ID.",
-    "Import stopwords from google spreadsheets:": "Import stopwords from google spreadsheets:"
+    "Google spreadsheets key:": "Google spreadsheets key:",
+    "Enter the shared google spreadsheets key.": "Enter the shared google spreadsheets key.",
+    "Google Spreadsheets data types:": "Google Spreadsheets data types:",
+    "Would you like to import stopwords?": "Would you like to import stopwords?",
+    "Import stopwords from Google spreadsheets.": "Import stopwords from Google spreadsheets.",
+    "Existing stopwords cannot be restored.": "Existing stopwords cannot be restored."
 }
