--- a/src/locales/ko/translation.json
+++ b/src/locales/ko/translation.json
@@ -52,4 +52,5 @@
     "Would you like to import stopwords?": "금칙어를 불러오시겠습니까?",
     "Import stopwords from Google spreadsheets.": "구글 스프레드시트에서 금칙어를 불러옵니다.",
     "Existing stopwords cannot be restored.": "기존 금칙어는 복원할 수 없습니다."
+    "Exclude the first line": "첫 번째 줄을 제외합니다"
 }
