refactor: the settings panel is subdivided

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -17,22 +17,24 @@
     "Characters used:": "Characters used:",
     "Character length:": "Character length:",
     "Order of characters:": "Order of characters:",
-    "Enter the stopwords:": "Enter the stopwords:",
-    "Enter the special characters to be removed:": "Enter the special characters to be removed:",
+    "Enter stopwords:": "Enter stopwords:",
+    "Enter special characters:": "Enter special characters:",
     "Please enter text": "Please enter text",
     "Seperated by whitespace": "Seperated by whitespace",
     "Select the text length per line:": "Select the text length per line:",
     "Naver Ads": "Naver Ads",
     "Highlighting stopwords": "Highlighting stopwords",
     "General Settings": "General Settings",
-    "Advanced Settings": "Advanced Settings",
+    "Character Settings": "Character Settings",
+    "Stopword Settings": "Stopword Settings",
+    "Import Settings": "Import Settings",
     "Reset": "Reset",
     "Reseted!": "Reseted!",
     "Agree": "Agree",
     "Disagree": "Disagree",
     "Are you sure you want to reset all settings?": "Are you sure you want to reset all settings?",
-    "All settings in General Settings and Advanced Settings will be reset.": "All settings in General Settings and Advanced Settings will be reset.",
-    "Resetting cannot restore existing settings.": "Resetting cannot restore existing settings.",
+    "All settings will be reset.": "All settings will be reset.",
+    "Existing settings cannot be restored.": "Existing settings cannot be restored.",
     "Remove index column:": "Remove index column:",
     "Remove stopwords": "Remove stopwords",
     "Digit+Word": "Digit+Word",
@@ -52,5 +54,7 @@
     "Would you like to import stopwords?": "Would you like to import stopwords?",
     "Import stopwords from Google spreadsheets.": "Import stopwords from Google spreadsheets.",
     "Existing stopwords cannot be restored.": "Existing stopwords cannot be restored.",
-    "Exclude the first line": "Exclude the first line"
+    "Exclude the first line": "Exclude the first line",
+    "There is {{length}} blank line.": "There is {{length}} blank line.",
+    "Blank line counting is done before characters are added.": "Blank line counting is done before characters are added."
 }
