--- a/src/locales/ko/translation.json
+++ b/src/locales/ko/translation.json
@@ -17,22 +17,24 @@
     "Characters used:": "사용된 문자:",
     "Character length:": "문자의 길이:",
     "Order of characters:": "문자의 순서:",
-    "Enter the stopwords:": "금칙어를 입력하세요:",
-    "Enter the special characters to be removed:": "삭제할 특수 문자를 입력하세요:",
-    "Please enter text": "텍스트를 입력 하십시오",
+    "Enter stopwords:": "금칙어를 입력하세요:",
+    "Enter special characters:": "특수문자를 입력하세요:",
+    "Please enter text": "텍스트를 입력하세요",
     "Seperated by whitespace": "공백으로 구분 합니다",
     "Select the text length per line:": "텍스트 길이를 선택하세요:",
     "Naver Ads": "네이버 광고",
     "Highlighting stopwords": "금칙어 강조 표시",
     "General Settings": "일반 설정",
-    "Advanced Settings": "고급 설정",
+    "Character Settings": "문자 설정",
+    "Stopword Settings": "금칙어 설정",
+    "Import Settings": "불러오기 설정",
     "Reset": "초기화",
     "Reseted!": "재설정되었습니다!",
     "Agree": "동의",
     "Disagree": "미동의",
     "Are you sure you want to reset all settings?": "모든 설정을 재설정하시겠습니까?",
-    "All settings in General Settings and Advanced Settings will be reset.": "일반 설정 및 고급 설정의 모든 설정이 재설정됩니다.",
-    "Resetting cannot restore existing settings.": "재설정하면 기존 설정을 복원할 수 없습니다.",
+    "All settings will be reset.": "모든 설정이 재설정됩니다.",
+    "Existing settings cannot be restored.": "기존 설정은 복원할 수 없습니다.",
     "Remove index column:": "인덱스 열 제거:",
     "Remove stopwords": "금칙어 중복 제거",
     "Digit+Word": "숫자+문자",
@@ -52,5 +54,7 @@
     "Would you like to import stopwords?": "금칙어를 불러오시겠습니까?",
     "Import stopwords from Google spreadsheets.": "구글 스프레드시트에서 금칙어를 불러옵니다.",
     "Existing stopwords cannot be restored.": "기존 금칙어는 복원할 수 없습니다.",
-    "Exclude the first line": "첫 번째 줄을 제외합니다"
+    "Exclude the first line": "첫 번째 줄을 제외합니다",
+    "There is {{length}} blank line.": "빈 줄이 {{length}}개 있습니다.",
+    "Blank line counting is done before characters are added.": "빈 줄 카운팅은 문자가 추가되기 전에 수행됩니다."
 }
